# anime-recommendation-system

./: .gitignore  Dockerfile  README  README.md  freeze_recommendations.ipynb  main.py  pyproject.toml  requirements.txt  validation.py
algorithms/: __init__.py
algorithms/character_match/: __init__.py  build_algo.py  character_mlb.joblib  character_tags_encoder.joblib
algorithms/genre_match/: __init__.py  build_algo.py
algorithms/other_algo/: __init__.py
algorithms/random/: __init__.py
algorithms/similarity_search/: __init__.py  (+2 more)
data/: anime_data.csv  merge_datasets.py
recommendation_algorithm/: create_index.py  recommender.py
recommendations_manager/: __init__.py  build_recommendations_graph.py
recommender/: __init__.py
scrap_data/: 1_scrap_by_genre.py  2_join_anime_codes.py  3_get_extra_data.py  4_convert_json_to_csv.py  5_scrap_reviews.py  6_scrap_recs.py  animes_amount.py  convert_json_to_csv.py  create_lookup_table.py  genres_list.txt  get_extra_data.py  get_seasonal_data.py  join_anime_codes.py  scrap_by_genre.py  scrap_reviews.py  scrap_reviews_limited.py
scrap_data_anidb/: 0_intersection.py  1_scrap_anime.py
scrap_data_ap/: 1_scrap_anime_codes.py  2_get_animes_data.py  3_process_data.py  4_match_anime.py  get_animes_data_2.py  match_anime_4.py  process_data_3.py
scrap_data_mal/: 1_scrap_by_genre.py  4_convert_json_to_csv.py  5_scrap_reviews.py  7_convert_recs_to_csv.py  convert_json_to_csv_4.py  get_extra_data_3.py  get_seasonal_data.py  join_anime_codes_2.py  scrap_recs_6.py  scrap_reviews_5.py
utils/: __init__.py  merge_datasets.py
(+24 files in other folders)
